--- a/105.1_Brooklyn_Robertson/105.1_Brooklyn_Robertson/105.1_Brooklyn_Robertson.vcxproj.filters
+++ b/105.1_Brooklyn_Robertson/105.1_Brooklyn_Robertson/105.1_Brooklyn_Robertson.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Task3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Task4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
